# CubePreAlpha

./: CMakeLists.txt
include/: glfwConf.h  openConf.h  utilMath.h
include/components/GameObject/: GameObject.h
include/components/Mesh/: Mesh.h
include/graphics/: buffer.h  camera.h  glfwConf.h  openConf.h  shader.h  texture.h  uniforms.h
include/libs/graphics/: glfwConf.h
include/math/: transform.h  utilMath.h
include/mesh/: meshes.h
include/pieces/: pieces.h
include/pieces/Camera/: Camera.h
include/pieces/GameObject/: GameObject.h
include/pieces/Math/: Vec2.h  Vec3.h
include/pieces/Mesh/: Mesh.h
include/pieces/Transform/: transform.h
pieces/: pieces.cpp
pieces/Math/: Vec3.cpp
src/Graphics/: buffer.cpp  camera.cpp  glfwConf.cpp  main.cpp  openConf.cpp  shader.cpp  texture.cpp  uniforms.cpp
src/Main/: main.cpp
src/math/: transform.cpp  utilMath.cpp
src/mesh/: meshes.cpp
src/shaders/: fragmentShader.fs  vertexShader.vs
